--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     background-image: url(images/background.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .container {
