--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+@font-face {
+    font-family: 'Barlow';
+    src: url(fonts/Barlow-Regular.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Barlow', sans-serif;
     box-sizing: border-box;
 }
 
@@ -55,7 +60,7 @@ nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #00ffdd;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -77,7 +82,7 @@ nav ul li a:hover::after {
 }
 
 .header-text h1 span{
-    color: #ff004f;
+    color: #00ffdd;
 } 
 
 #about {
@@ -127,7 +132,7 @@ nav ul li a:hover::after {
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #00d8bb;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -144,7 +149,7 @@ nav ul li a:hover::after {
 }
 
 .tab-contents ul li span {
-    color: #b54769;
+    color: #3e9287;
     font-size: 14px;
 }
 
@@ -196,7 +201,7 @@ nav ul li a:hover::after {
 }
 
 .services-list div:hover {
-    background: #ff004f;
+    background: #00d8bb;
     transform: translateY(-10px);
 }
 
@@ -227,7 +232,7 @@ nav ul li a:hover::after {
 .layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), #00d8bb);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -250,7 +255,7 @@ nav ul li a:hover::after {
 
 .layer a {
     margin-top: 20px;
-    color: #ff004f;
+    color: #00d8bb;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -273,14 +278,17 @@ nav ul li a:hover::after {
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #00d8bb;
     padding: 14px 50px;
     border-radius: 6px;
     transition: background 0.5s;
+
+    color: #006e60;
+    text-decoration: none;
 }
 
 .btn:hover {
-    background: #ff004f;
+    background: #00d8bb;
 }
 
 .contact-left {
@@ -296,7 +304,7 @@ nav ul li a:hover::after {
 }
 
 .contact-left i {
-    color: #ff004f;
+    color: #00d8bb;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -315,13 +323,13 @@ nav ul li a:hover::after {
 }
 
 .social-icons a:hover {
-    color: #ff004f;
+    color: #00d8bb;
     transform: translateY(-5px);
 }
 
 .btn.btn2 {
     display: inline-block;
-    background: #ff004f;
+    background: #00d8bb;
 }
 
 .contact-right form{
@@ -380,7 +388,7 @@ nav .fas {
     }
 
     nav ul {
-        background: #ff004f;
+        background: #00d8bb;
         position: fixed;
         top: 0;
         right: -200px;
