--- a/style.css
+++ b/style.css
@@ -369,6 +369,10 @@ nav .fas {
 }
 
 @media only screen and (max-width: 600px) {
+    #header {
+        background-image: url(images/background2.jpg); /* Change the background image here */
+    }
+
     .header-text {
         margin-top: 100%;
         font-size: 16px;
